# nil-xit

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake.in  cpack.cmake  pyproject.toml.in  toolchain.cmake
configure/: windows
doc/: 01-How-It-Works.md  02-Frames.md  03-Supported-Types.md  04-Number-Issues.md
docs/: 02-Frames.md  03-Supported-Types.md  04-Number-Issues.md  c-api.md
sandbox/: CMakeLists.txt  add_frame.cpp  add_frame.hpp  fbs.cpp  index.html  main.c  main.cpp  main.lua  main.py  package.json  pnpm-lock.yaml  sandbox.cpp  sandbox_test.cpp  tsconfig.json
sandbox/assets/: bundler.js
sandbox/basic/: CMakeLists.txt  add_frame.cpp  add_frame.hpp  main.cpp
sandbox/basic/gui/: Base.svelte  Group.svelte  Tagged.svelte
sandbox/gui/: Base.svelte  Demo.svelte  Group.svelte  GroupUp.svelte  JsonEditor.svelte  Markup.svelte  Tagged.svelte  nil-xit.d.ts
sandbox/gui/components/: Range.svelte  Text.svelte
sandbox/test/: CLI.svelte  CMakeLists.txt  FRAMES.md  TESTS.md  ViewFrame.svelte  main.cpp  userland_utils.hpp  xit_gtest.cpp  xit_gtest.hpp  xit_test.cpp  xit_test.hpp
sandbox/test/gui/: CLI.svelte  EditorFrame.svelte  Main.svelte  Slider.svelte  ViewFrame.svelte
sandbox/xit/: index.js
src/: CMakeLists.txt
src/ffi/lua/: README.md  nil_xit.lua
src/ffi/python/: .gitignore  CMakeLists.txt  README.md  build.sh  nil_xit.py  nil_xit.pyi  pyproject.toml  setup.py
src/ffi/python/nil_xit/: __init__.py
src/publish/nil/: xit.h  xit.hpp
src/publish/nil/xit/: add_frame.hpp  buffer_type.hpp  setter_type.hpp  structs.hpp
src/publish/nil/xit/methods/: add_frame.hpp  bind.hpp  get.hpp  listen.hpp  make_core.hpp  post.hpp  set.hpp
src/publish/nil/xit/tagged/: add_option.hpp  add_signal.hpp  add_value.hpp  bind.hpp  has_subscribers.hpp  listen.hpp  on_load.hpp  on_sub.hpp  post.hpp  structs.hpp
src/publish/nil/xit/unique/: add_option.hpp  add_signal.hpp  add_value.hpp  bind.hpp  has_subscribers.hpp  listen.hpp  on_load.hpp  on_sub.hpp  post.hpp  structs.hpp
src/src/: add_frame.cpp  codec.hpp  create_core.cpp  make_server.cpp  structs.hpp  utils.cpp  utils.hpp  xit.cpp
src/src/c/: ValueType.hpp  xit.cpp
src/src/messages/: .gitignore  CMakeLists.txt  message.fbs  message.fbs.h
src/src/messages/js_bundling/: .gitignore  package.json  pnpm-lock.yaml  rollup.config.js  run  tsconfig.json
src/src/methods/: add_frame.cpp  bind.cpp  create_core.cpp  get.cpp  impl_set.cpp  impl_set.hpp  listen.cpp  make_core.cpp  msg_set.cpp  msg_set.hpp  post.cpp  set.cpp
src/src/proto/: .gitignore  CMakeLists.txt  message.proto
src/src/structs/: Binding.hpp  Core.hpp  Frame.hpp
src/src/tagged/: add_option.cpp  add_signal.cpp  add_value.cpp  bind.cpp  has_subscribers.cpp  listen.cpp  on_load.cpp  on_sub.cpp  post.cpp  structs.hpp  utils.cpp  utils.hpp
src/src/unique/: add_option.cpp  add_signal.cpp  add_value.cpp  bind.cpp  has_subscribers.cpp  listen.cpp  on_load.cpp  on_sub.cpp  post.cpp  structs.hpp  utils.cpp  utils.hpp
